--- a/frontend/src/components/styles/styles.css
+++ b/frontend/src/components/styles/styles.css
@@ -96,7 +96,7 @@ h2{
     display: flex;
     justify-content: space-between;
     background-color: white;
-    /* box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2) */
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2)
 }
 .admin-img {
     height: 100%;
@@ -163,7 +163,7 @@ h2{
 .input-field1{
     width: 85%;
     margin: 10px;
-    padding: 20px;
+    padding: 15px;
     border-radius: 20px;
 }
 
@@ -181,4 +181,28 @@ h2{
     color: rgb(124, 123, 123);
     font-family: cursive;
     font-size: medium;
+}
+
+/* user header */
+
+#header-user{
+    height: 10vh;
+    background-color: white;
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2)
+}
+
+.header-cls{
+    display: flex;
+    padding: 20px 50px;
+    
+}
+
+.modify-btn{
+    border-radius: 40px;
+    padding: 5px 20px;
+}
+
+li{
+    list-style: none;
+    padding: 0px 25px;
 }
