--- a/ClientSide/src/Components/Style/AdminPagenav.css
+++ b/ClientSide/src/Components/Style/AdminPagenav.css
@@ -5,14 +5,14 @@
     display: flex;
     justify-content: space-between;
    align-items: center;
-}
+};
 #img-logo{
     height: 80px;
     width: 80px;
     border-radius: 50%;
     margin-left: 90px;
     
-}
+};
 #logout-admin-page-butn-admin{
  margin-right: 60px;   
  background-color: rgb(52, 79, 127);
