--- a/ClientSide/src/Components/Style/AdminPagenav.css
+++ b/ClientSide/src/Components/Style/AdminPagenav.css
@@ -21,11 +21,11 @@
  border-radius: 10px;
  font-weight: bold;
  width: 140px;
-}
+};
 #name-of-the-app-rental-car-app{
     margin-left: 15px;
 font-size:x-large;
 font-weight: bolder;  
 text-shadow: 1px 1px 2px black;
 color: rgb(224, 224, 229);
-}
+};
