--- a/frontend/src/components/styles/styles.css
+++ b/frontend/src/components/styles/styles.css
@@ -247,6 +247,13 @@ li{
     border-radius: 15px  15px 0px  0px;
 }
 
+#car-img{
+    height: 150px;
+    width:300px;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+}
+
 .person-nos{
     color: rgb(174, 164, 164);
     padding-left: 5px;
