--- a/frontend/src/components/styles/styles.css
+++ b/frontend/src/components/styles/styles.css
@@ -292,7 +292,7 @@ li{
     overflow-x: hidden;
 }
 
-.car-details{
+.car-details1{
     display: flex;
     justify-content: space-between;
     padding: 0px 5px;
